fixed viewports of hexes and containers

--- a/source/custom_pages/landing.html.haml
+++ b/source/custom_pages/landing.html.haml
@@ -7,7 +7,7 @@
     %div#name-and-nav.blue.outline
       %div#name.pull-left
         Marc S. Kruza
-      %ul.nav.nav-tabs.pull-right
+      %ul.navlinks.pull-right
         %li{ role: "presentation"}
           %a.menu-link{ href: "#novels-id" } Books
         %li{ role: "presentation"}
@@ -33,15 +33,28 @@
           %img.social-media-widget{ src: "/images/icon_linked_in.png" }
 
     %div#headshot-and-highlights.row
-      %div.col-xs-12.col-sm-6.col-md-3.big-hex-holder
-        %img.big-hex.one{ src: "/images/me.jpg"}
+      %div.big-hex-holder.one
+        %img.big-hex{ src: "/images/me.jpg"}
 
-      %div.col-xs-12.col-sm-6.col-md-6.big-hex-holder
-        %section.big-hex.two Having graduated from Florida State with degrees in Computer Science and Music Composition, my interests range from writing novels to writing computer programs, and from singing in church to playing in a local rock band. I love beaches, mountains, surfing and hiking... and writing about them. I'd love to find a way to put my talents to work for you!
-      
-      %div.col-xs-12.col-sm-6.col-md-3.big-hex-holder
-        %img.big-hex.three{ src: "/images/15b.jpg" }
-      
+      %div.big-hex-holder.two
+        %section.big-hex 
+          %br
+          %p Having graduated from 
+          %p Florida State with degrees 
+          %p in Computer Science and  
+          %p Music Composition, my interests 
+          %p range from writing novels to writing   
+          %p computer programs, and from singing in   
+          %p church to playing in a local rock band. I 
+          %p love beaches, mountains, surfing 
+          %p and hiking, and writing about
+          %p them. I'd love to find a way  
+          %p to put my talents to work 
+          %p for you!
+
+      %div.big-hex-holder.three
+        %img.big-hex{ src: "/images/15b.jpg" }
+
 %div.container-fluid.red.outline
 
   %div#box-middle-medium.row
