--- a/source/custom_pages/landing.html.haml
+++ b/source/custom_pages/landing.html.haml
@@ -13,7 +13,7 @@
         %li{ role: "presentation"}
           %a.menu-link{ href: "#articles-id"} Articles
         %li{ role: "presentation"}
-          %a.menu-link{ href: "#blog-id"} Blog
+          %a.menu-link{ href: "/blog.html"} Blog
     
     %ul#social-media-bar.green.outline 
       %li
@@ -55,7 +55,7 @@
       %div.big-hex-holder.three
         %img.big-hex{ src: "/images/15b.jpg" }
 
-%div.container-fluid.red.outline
+%div.container-fluid
 
   %div#box-middle-medium.row
     %div#novels.tall-rectangle
@@ -63,32 +63,32 @@
       %div.subtitle Me, Myself and I'm Lost
       %div.row
         %a.buy-link.col-xs-6{ href: "http://www.amazon.com/Me-Myself-Im-Lost-Nerd/dp/150850234X/ref=sr_1_2?ie=UTF8&qid=1431172322&sr=8-2&keywords=me%2C+myself+and+i%27m+lost" } Buy Book
-        %a.buy-link.col-xs-6.pull-right{ href: "https://www.amazon.com/Me-Myself-Im-Lost-Freshman-ebook/dp/B00XD5XWHM/ref=sr_1_1?ie=UTF8&qid=1431172322&sr=8-1&keywords=me%2C+myself+and+i%27m+lost" } Buy Kindle
+        %a.buy-link.col-xs-6{ href: "https://www.amazon.com/Me-Myself-Im-Lost-Freshman-ebook/dp/B00XD5XWHM/ref=sr_1_1?ie=UTF8&qid=1431172322&sr=8-1&keywords=me%2C+myself+and+i%27m+lost" } Buy Kindle
       %section.my-list What's more dangerous: asteroids and space aliens, or swirlies and high school punks? Join Matt, an up-and-coming graphic artist, as he navigates his own coming-of-age freshman year universe while relating in his sketchbook just how much high school feels like a dystopian space prison in which there are no rules, no order, and no friends.
 
       %div.row
-        %div.narrow-book.col-xs-5
-          %img.img-responsive{ src: "/assets/images/novel_cover_smaller.jpg"}
-        %div.narrow-book.col-xs-5
-          %img.img-responsive.pull-right{ src: "/assets/images/preteens.jpg" }
+        %div.narrow-book
+          %img.img-responsive{ src: "/images/novel_cover_smaller.jpg"}
+        %div.narrow-book
+          %img.img-responsive{ src: "/images/preteens.jpg" }
       %div
         %div.subtitle Staying By His Side
-        %div.row
-          %a.buy-link.col-xs-6{ href: "https://www.amazon.com/Chicken-Soup-Soul-Preteens-Inspiration/dp/1935096737" } Buy Book
-          %a.buy-link.col-xs-6.pull-right{ href: "https://www.amazon.com/Chicken-Soup-Soul-Preteens-Inspiration-ebook/dp/B004G8QTLQ/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=&sr=" } Buy Kindle      
+
+        %a.buy-link{ href: "https://www.amazon.com/Chicken-Soup-Soul-Preteens-Inspiration/dp/1935096737" } Buy Book
+        %a.buy-link{ href: "https://www.amazon.com/Chicken-Soup-Soul-Preteens-Inspiration-ebook/dp/B004G8QTLQ/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=&sr=" } Buy Kindle      
       %section.my-list This is an essay I wrote recounting a fun yet unexpectedly scary day with my grandpa at Busch Gardens, appeared in Chicken Soup For The Soul Just For Preteens&#9400, an anthology of encouraging stories about that tumultuous time of youth.
 
     %div#articles.tall-rectangle
       %h1.section-title#articles-id Articles 
       %div.row
-        %a.buy-link.col-xs-12{ href: "http://charlestondaily.net/mount-pleasant-author-inspires-young-readers-with-new-hybrid-graphic-young-adult-novel/" }  Media: Author Interview
+        %a.buy-link{ href: "http://charlestondaily.net/mount-pleasant-author-inspires-young-readers-with-new-hybrid-graphic-young-adult-novel/" }  Media: Author Interview
       %section.my-list Charleston Daily: What do you want your readers to take away from your novel? 
       %section.my-list Marc S. Kruza: Adolescence is only a temporary condition. Asking for help in times of severe psychological stress is a sign of strength, not weakness.    
       %div.row
-        %a.buy-link.col-xs-12{ href: "napali.html" } Backpacking in Paradise
+        %a.buy-link{ href: "/napali.html" } Backpacking in Paradise
       %section.my-list There's more to Hawaii than luaus and waves... how about four days of backpacking through the Garden of Eden?
       %div.row
-        %a.buy-link.col-xs-12{ href: "cessna.html" } Soar Cessna
+        %a.buy-link{ href: "/cessna.html" } Soar Cessna
       %section.my-list When your car breaks down on the drive home for Christmas, do you: call your pilot friend and have him fly you home, learn that "FORD" stands for "found on roadside dead," call a AAA towtruck, or "all of the above?"
 
       
