linked home and landing pages together

--- a/source/custom_pages/landing.html.haml
+++ b/source/custom_pages/landing.html.haml
@@ -9,6 +9,8 @@
         Marc S. Kruza
       %ul.navlinks.pull-right
         %li{ role: "presentation"}
+          %a.menu-link{ href: "/index.html" } Home      
+        %li{ role: "presentation"}
           %a.menu-link{ href: "#novels-id" } Books
         %li{ role: "presentation"}
           %a.menu-link{ href: "#articles-id"} Articles
