--- a/source/partials/_header.html.haml
+++ b/source/partials/_header.html.haml
@@ -10,7 +10,9 @@
     %div.menu-bar
       %ul.wide-and-centered
         %li
-          %a.menu-link{ href: "/index.html"}  Home   
+          %a.menu-link{ href: "/index.html"}  Home 
+        %li
+          %a.menu-link{ href: "/custom_pages/landing.html"}  Landing    
         %li 
           %a.menu-link{ href: "/books.html"}  Books
         %li
