--- a/source/stylesheets/landing.scss
+++ b/source/stylesheets/landing.scss
@@ -63,8 +63,8 @@ body {
   top: 5em;
   left: 2em;
   z-index: 150;
-  animation-delay: 2s;
-  -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */ 
+/*  animation-delay: 2s;
+  -webkit-animation: fadein 1s;*/ /* Safari, Chrome and Opera > 12.1 */ 
 }
 
 @-webkit-keyframes fadein {
@@ -93,7 +93,10 @@ body {
     -webkit-clip-path: polygon(0% 50%, 25% 5%, 75% 5%, 100% 50%, 75% 95%, 25% 95%);
   }
 
-  
+  transition: all 0.125s linear;
+  &:after{
+    transform: rotateY(360deg);
+  }
 }
 
 .big-hex {
@@ -103,6 +106,7 @@ body {
   height: 18em;
   background-color: gray;
   -webkit-clip-path: polygon(0% 50%, 25% 5%, 75% 5%, 100% 50%, 75% 95%, 25% 95%);
+
 }
 
 .one {
@@ -134,6 +138,7 @@ body {
 
 /* smaller viewport, default setting */
 .three {
+
   left: 0;
   top:  16em;
 }
@@ -223,7 +228,7 @@ body {
     background-color: #674F33;
     top: 2.5em;
     left: 50%;
-    width: 50%;
+    width: 45%;
     z-index: 150;
   }  
 }
