put landing page link on index, made large top yellow name and blue links a little smaller. Deployed.

--- a/source/custom_pages/landing.html.haml
+++ b/source/custom_pages/landing.html.haml
@@ -55,7 +55,7 @@
           %p for you!
 
       %div.big-hex-holder.three
-        %img.big-hex{ src: "/images/15b.jpg" }
+        %img.big-hex{ src: "/images/p19_f6_surfing.jpg" }
 
 %div.container-fluid
 
