--- a/source/stylesheets/landing.scss
+++ b/source/stylesheets/landing.scss
@@ -90,6 +90,8 @@ body {
   section {
     display: inline-block;
     font-weight: bold;
+    clip-path: polygon(0% 50%, 25% 5%, 75% 5%, 100% 50%, 75% 95%, 25% 95%);
+    -moz-clip-path: polygon(0% 50%, 25% 5%, 75% 5%, 100% 50%, 75% 95%, 25% 95%);
     -webkit-clip-path: polygon(0% 50%, 25% 5%, 75% 5%, 100% 50%, 75% 95%, 25% 95%);
   }
 
